# vortixstream-pr-agency

./: .gitignore  ADMIN_COMPLETE.md  ADMIN_COMPLETE_FINAL.md  ADMIN_CORRECTED.md  ADMIN_FINAL_FIXES.md  ADMIN_PRICING_PR_PACKAGES_COMPLETE.md  ADMIN_SIDEBAR_FIXED.md  ADMIN_SIDEBAR_UPGRADE.md  ADMIN_SYSTEM_COMPLETE.md  API_STYLE_UNIFICATION_ANALYSIS.md  API_STYLE_UNIFICATION_COMPLETE.md  AUTH_AND_USER_MANAGEMENT_COMPLETE.md  AUTH_CONTEXT_IMPLEMENTATION_COMPLETE.md  AUTH_CONTEXT_MIGRATION_PLAN.md  AUTH_IMPLEMENTATION_COMPLETE.md  AUTH_SECURITY_FIX_SUMMARY.md  BCRYPT_MIGRATION_ANALYSIS.md  CAROUSEL_CMS_IMPLEMENTATION_COMPLETE.md  CAROUSEL_SUBTITLE_FEATURE_COMPLETE.md  CMS_DATABASE_AUDIT_REPORT.md  CMS_IMPLEMENTATION_COMPLETE.md  CMS_NULL_FALLBACK_AUDIT.md  CMS_NULL_FALLBACK_FIX_COMPLETE.md  CMS_SECTION_JSONB_MIGRATION_GUIDE.md  COMPREHENSIVE_VERIFICATION_CHECKLIST.md  CONTACT_NEWSLETTER_STATUS.md  CORRECT_REFACTOR_PRINCIPLES.md  CRITICAL_LESSONS_FOR_CMS_DATA_LOADING.md  CSS_PRIORITY_AND_DIAGNOSTIC_GUIDE.md  DATABASE_ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  FINAL_TEST_REPORT.md  FINAL_VERIFICATION.md  FIX-SUMMARY.md  GLASSMORPHISM_MODAL_FIX_LESSONS.md  GOOGLE_OAUTH_SETUP.md  HERO_CMS_IMPLEMENTATION_PLAN.md  HERO_SECTION_COMPLETE_STYLE_AUDIT.md  ISSUES.md  (+34 more)
backend/: .gitignore  ADMIN_PLAN.md  API_ROUTES.md  BACKEND_PLAN.md  IMPORT_SUMMARY.md  LESSONS_LEARNED.md  LESSONS_LEARNED_camelCase_snake_case.md  README.md  TEST_RESULTS.md  create_test_admin.py  import_all_pr_packages.py  import_frontend_data.py  import_pr_categories.py  import_pr_packages.py  nixpacks.toml  (+9 more)
(+401 files in other folders)
